[workspace]
default = "cycles-ledger"
members = [
    # Production crates
    "cycles-ledger",

    # Crates used for testing only
    "depositor",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
license = "Apache-2.0"
repository = "https://github.com/dfinity/cycles-ledger"
publish = false # don't publish to crates.io

[workspace.dependencies]
candid = "0.9.5"
ic-cdk = { version = "0.10.0" }
ic-cdk-macros = { version = "0.6.0" }
icrc-ledger-types = "0.1.1"
serde = "1"

[workspace.metadata.release] # cargo-release
# list of replacements to be made after issuing `cargo release SEMVER`
pre-release-replacements = [
  # cargo release expects to find CHANGELOG.md file inside the package that's supposed to be released (e.g. cycles-ledger),
  # therefore we need to go one directory level up, so it will search for the change log in the root of the repository
  {file="../CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="../CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="../CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="../CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="../CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/dfinity/dfx-extensions/compare/{{tag_name}}...HEAD", exactly=1},
]
