[workspace]
resolver = "2"
members = [
    # Production crates
    "cycles-ledger",
    # Crates used for testing only
    "depositor",
    "fake-cmc",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
license = "Apache-2.0"
repository = "https://github.com/dfinity/cycles-ledger"
publish = false                                         # don't publish to crates.io
rust-version = "1.75.0"
description = "The cycles ledger is a global ledger canister that enables principal IDs to hold cycles."

[workspace.dependencies]
candid = "0.10.17"
candid_parser = "0.1"
ic-cdk = { version = "0.18.6" }
ic-cdk-macros = { version = "0.18.6" }
ic-cdk-executor = "1.0.2"
icrc-ledger-types = "0.1.10"
anyhow = "1.0"
async-trait = "0.1.71"
hex = "0.4.3"
ic-agent = "0.31.0"
reqwest = "0.11"
pocket-ic = "9.0.2"
ic-test-state-machine-client = "3.0.0"
rand = "0.8.5"
serde = "^1.0.184"
tempfile = "3.3"
thiserror = "1"
tokio = { version = "1.20.1", features = ["macros"] }

[workspace.metadata.release] # cargo-release
# list of replacements to be made after issuing `cargo release SEMVER`
pre-release-replacements = [
    # cargo release expects to find CHANGELOG.md file inside the package that's supposed to be released (e.g. cycles-ledger),
    # therefore we need to go one directory level up, so it will search for the change log in the root of the repository
    { file = "../CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
    { file = "../CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
    { file = "../CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}" },
    { file = "../CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly = 1 },
    { file = "../CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/dfinity/cycles-ledger/compare/{{tag_name}}...HEAD", exactly = 1 },
]

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
