[package]
name = "cycles-ledger"
description = "The cycles ledger is a global ledger canister that enables principal IDs to hold cycles."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[dependencies]
anyhow = "1.0.75"
candid.workspace = true
ciborium = "0.2"
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-structures = "0.5.0"
icrc-ledger-types.workspace = true
minicbor = {version = "0.19.1", features = ["alloc", "derive"]}
num-bigint = "0.4"
num-traits = "0.2"
serde.workspace = true
serde_bytes = "0.11"
thiserror = "1.0"
ic-canister-log = "0.2.0"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", rev = "a033d30216116523dc495a4d0f3976b5aa47c2c8" }
ic-metrics-encoder = "1.1"
serde_json = "1.0.40"

[dev-dependencies]
depositor = { path = "../depositor" }
escargot = { version = "0.5.7", features = ["print"] }
ic-test-state-machine-client = "3.0.0"
icrc1-test-env-state-machine = "0.1.1"
icrc1-test-suite = "0.1.1"
futures = "0.3.28"
proptest = "1.2.0"

[features]
testing = []
