[package]
name = "cycles-ledger"
description = "The cycles ledger is a global ledger canister that enables principal IDs to hold cycles."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.75"
candid.workspace = true
ciborium = "0.2"
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-certified-map = "0.4.0"
ic-stable-structures = "0.6.4"
icrc-ledger-types.workspace = true
hex = "0.4.3"
minicbor = { version = "0.19.1", features = ["alloc", "derive"] }
num-bigint = "0.4"
num-traits = "0.2"
serde.workspace = true
serde_bytes = "0.11"
thiserror = "1.0"
ic-canister-log = "0.2.0"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", rev = "b2f18ac0794d2225b53d9c3190b60dbadb4ac9b9" }
ic-metrics-encoder = "1.1"
serde_json = "1.0.107"
leb128 = "0.2.5"

[dev-dependencies]
assert_matches = "1.5.0"
candid_parser.workspace = true
depositor = { path = "../depositor" }
escargot = { version = "0.5.7", features = ["print"] }
ic-cbor = "2.3.0"
ic-certification = "2.3.0"
ic-certificate-verification = "2.3.0"
ic-management-canister-types = "0.3.3"
icrc1-test-env-pocket-ic = "0.2.0"
icrc1-test-suite = "0.2.0"
lazy_static = "1.4.0"
pocket-ic = "9.0.2"
proptest = "1.2.0"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["rt", "macros"] }

[features]
testing = []
